# tree-pdf-viewer

./: Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
.kilo/plans/: 1775743617344-happy-meadow.md
.qwen/: settings.json  settings.json.orig
chat/: 1.md  2.md  Building A Performance PDF Reader.md  Finalizing Performance PDF Reader.md
src/: App.css  App.tsx  commands.ts  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/cache/: mod.rs
src/components/: PdfViewer.tsx  SettingsDialog.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  TreeNode.tsx  TreeView.tsx
src/engine/: mod.rs  mupdf.rs  pdfium.rs  webview.rs  win_pdf.rs
src/fs/: mod.rs
src/store/: appStore.ts
