[package]
name = "tree-pdf-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34", features = ["persistence", "serde"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "svg"] }
pdfium-render = "0.9.0"
mupdf = { version = "0.6.0", optional = true }
windows = { version = "0.58.0", features = [
    "Data_Pdf",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.19.1"
walkdir = "2.5.0"
rayon = "1.10.0"
lru = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
rfd = "0.15" # 文件对话框
image = "0.25.5" # 用于位图处理
anyhow = "1.0" # 错误处理
log = "0.4"
env_logger = "0.11"

[features]
default = []
mupdf = ["dep:mupdf"]

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
