[package]
name = "tree-pdf-viewer"
version = "0.1.0"
description = "A PDF viewer with tree-style file navigation"
authors = ["ppr21"]
edition = "2021"

[lib]
name = "tree_pdf_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile optimized for CI: small binary + fast enough build
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

